--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-shorthand-properties": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-e2e-cypress": "^3.2.0",
