--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@feathersjs/authentication-client": "^1.0.9",
     "@feathersjs/feathers": "^3.3.0",
     "@feathersjs/rest-client": "^1.4.6",
+    "@feathersjs/socketio-client": "^1.2.0",
     "babel-polyfill": "^6.26.0",
     "cookie-storage": "^3.2.0",
     "feathers-vuex": "^1.6.2",
