--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "socket.io-client": "^2.2.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-shorthand-properties": "^7.2.0",
